syntax = "proto3";
option java_multiple_files = true;
package com.grinch.OriginsService;

message OriginRequest {
    string country = 1;
    string city = 2;
}
message OriginResponse {
    bool result = 1;
}
service OriginsService {
    rpc validate(OriginRequest) returns (OriginResponse);
}